Fix Bug 338451 - Config radio buttons: follow the KDE HIG guidelines

FIXED-IN: 4.14.1
BUG: 338451